crates/mcb-server/tests/contract/snapshots/contract__session_contract_tests__session_happy_path.snap
---
source: crates/mcb-server/tests/contract/session_contract_tests.rs
assertion_line: 12
expression: "snapshot_payload(&request, status, &response)"
---
{
  "request": {
    "jsonrpc": "2.0",
    "method": "tools/call",
    "params": {
      "name": "list_sessions",
      "arguments": {
        "limit": 10
      }
    },
    "id": 1
  },
  "status": 200,
  "response": {
    "jsonrpc": "2.0",
    "result": {
      "resultType": "complete",
      "content": [
        {
          "type": "text",
          "text": "{\n  \"sessions\": [],\n  \"count\": 0\n}"
        }
      ],
      "isError": false
    },
    "id": 1
  }
}
