crates/mcb-server/tests/contract/snapshots/contract__session_contract_tests__session_invalid_args.snap
---
source: crates/mcb-server/tests/contract/session_contract_tests.rs
expression: "snapshot_payload(&request, status, &response)"
---
{
  "request": {
    "jsonrpc": "2.0",
    "method": "tools/call",
    "params": {
      "name": "list_sessions",
      "arguments": {
        "limit": "not_a_number"
      }
    },
    "id": 1
  },
  "status": 200,
  "response": {
    "jsonrpc": "2.0",
    "error": {
      "code": -32602,
      "message": "Failed to parse arguments: invalid type: string \"not_a_number\", expected u32"
    },
    "id": 1
  }
}
